# MTH9821-9831

./: .gitignore  Ex5.md  HW2_Group1.xlsx  HWQ1-3.ipynb  Hw1_q2.ipynb  LICENSE  README.md  hw1.ipynb  hw2.ipynb
HW1/: CallPricer.hpp  PutPricer.hpp  Q2  Q2.cpp  Untitled.ipynb  Untitled1.ipynb  black_scholes_pricer.hpp  black_scholes_tester.cpp  main.cpp  resultsHW1.csv
HW1_q1/: resultsHW1.csv  sanity_tester_bsm.cpp
HW2/: HW2.ipynb  exercise_4.cpp  hw2_9821_fall2023_mc2-blueprint.numbers  hw2_9821_fall2023_mc2-q1.xlsx
HW3/: BBSN_binomial_tree_res.csv  BBSN_binomial_tree_res_am.csv  BBS_binomial_tree_res.csv  BBS_binomial_tree_res_am.csv  HW3_q2+q3.ipynb  HW3_q2.ipynb  Untitled.ipynb  arg_binomial_tree_res_am.csv  avg_binomial_tree_res.csv  binomial_tree_res.csv  binomial_tree_res_am.csv
HW4/: HW4_Group1.xlsx  hw4_julius.ipynb
HW5/: CMakeLists.txt  american_pricers.cpp  american_pricers.h  main.cpp  regression.cpp
HW5/Q2_correct+Q3.1,3.2,3.3/: american_pricers.cpp
MTH9815/HW2/: CMakeLists.txt  products.hpp  productservice.hpp  q1-reader.cpp  q1-writer.cpp  readme.md  test_products.cpp
MTH9821/: HW10_submit.xlsx  HW11_submit.xlsx  HW12_submit.xlsx  HW2_Group1.xlsx  HW2_correct.xlsx  HW3_Group1.xlsx  HW4_Group1.xlsx  HW5_submit.xlsx  HW7_submit.xlsx  acceptance_rejection.csv  grid4.csv  hw1-q3.ipynb  hw1.ipynb  hw10.ipynb  hw11_9821_fall2023-discrete_dividends-ycsun.xlsx  hw12_9821_fall2023-barrier_options-ycsun.xlsx  hw1_9821_fall2023_mc1-blueprint.xlsx  hw1_9821_fall2023_mc1_ycsun.xlsx  hw1_q1.csv  hw2-heston.ipynb  hw2-q3.csv  hw2-q3.ipynb  hw2.2.csv  hw2.ipynb  hw2_9821_fall2023_mc2_ycsun.xlsx  hw2_q2.csv  hw3-q4.ipynb  hw3.ipynb  hw3.md  hw3_9821_fall2023_trees1_ycsun.xlsx  hw3_am_option.csv  hw3_eu_option.csv  hw4-q3.ipynb  hw4.1.csv  hw4_9821_fall2023_trees2-ycsun.xlsx  hw5-q2.ipynb  hw6-q2-q4.ipynb  hw6.md  hw7.ipynb  hw7_9821_fall2023_fd1-ycsun.xlsx  (+5 more)
MTH9821/HW5/code/: CMakeLists.txt  main.cpp  regression.cpp  regression.h  test_regression.cpp
MTH9831/: HW2.ipynb  (+19 more)
TreePricer/TreePricer/: BTreeDiscreteDividend.hpp  CMakeLists.txt  EuropeanOption.cpp  EuropeanOption.hpp  EuropeanPut.hpp  HW11.hpp  TTree.hpp  main.cpp
(+114 files in other folders)
